2010-09-17 v1.28 rafl 5558 tests
  * Re-upload 1.27 without further changes as a stable release.

2010-09-15 v1.27 rafl 5558 tests  DEVELOPMENT RELEASE
  * Try to support perls older than 5.8.8 again.
    Tested with 5.8.7 and 5.6.2.

2010-09-14 v1.26 rafl 5558 tests  DEVELOPMENT RELEASE
  * Error out early if libgmp or gmp.h are missing.
  * Clone Math::BigInt::GMP instances on thread cloning.
    This should make the module threadsafe.

2010-09-10 v1.25 rafl 5536 tests
  * Fix tests with Math::BigInt >= 1.90 and depend on it.

2007-07-31 v1.24 Tels 5530 tests
  * apply patch for warnings about ptr size mismatch under Cygwin (thanx Reini Urban!)
  * make it work under 5.6.x again by defining SvUOK() (Thanx Marcus Holland-Moritz
    and Reini Urban!)

2007-07-25 v1.23 Tels 5527 tests
  * require Math::BigInt 1.87
  * fix for _new() (appeared under Cygwin, but possible others, thanx
    Linda W. (report) and Reini Urban (patch)!)

2007-06-01 v1.22 Tels 5527 tests
  * require Math::BigInt 1.86
  * support api_version() 2 by adding _nok()
  * fix compilation issues on Mac/Darwin
  * _log_int() modifies it's argument instead of just returning a
    different object as result
  * speed up _log_int() greatly by taking a guess of the result
    and then improve it, instead of startig with 1 and going up. This means
    it takes now a more or less constant time, instead of a time proportional
    to the size/value of the result:

 Using Math::BigInt::GMP v1.21
  baselen 2:     3s (3.22 usr +  0.00 sys =  3.22 CPU) @ 7270/s (n=23411)
  baselen 2 big: 3s (3.11 usr +  0.06 sys =  3.17 CPU) @  962/s (n=3051)
  baselen 3:     3s (3.20 usr +  0.00 sys =  3.20 CPU) @ 1304/s (n=4173)
  baselen 7:     3s (3.20 usr +  0.00 sys =  3.20 CPU) @ 3306/s (n=10582)
  baselen 8:     3s (3.14 usr +  0.00 sys =  3.14 CPU) @ 3769/s (n=11836)
  baselen 11:    3s (3.24 usr +  0.00 sys =  3.24 CPU) @ 4750/s (n=15392)
  baselen 14:    3s (3.20 usr +  0.00 sys =  3.20 CPU) @ 5835/s (n=18673)