@@ -15,22 +15,22 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 70d6187d0152848c922dc4360fa6dd3a3dc35c62 BUGS
-SHA1 e943f88aad0b1279caef21c7c2a96156d0c794a0 CHANGES
+SHA1 ad5e1c7050e6195d092d8b92959c4ebaa3594f1e CHANGES
 SHA1 dda5ca4f413031e9efcaa1600461d5e2adaa3a40 CREDITS
 SHA1 35c155c10a9534cf296e357d60f06eed933cdba0 GMP.xs
 SHA1 fcb1ead705a964b5555ff355534cbcf8b4c176e5 INSTALL
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 d92d036825f848456802a2100373b7e021c1e4ed MANIFEST
 SHA1 f3190cb30c8df53e0fd78658ff9a6132e031042e MANIFEST.SKIP
-SHA1 6d15fcf2f61f1b224e638aa87ec8d0ded3571122 META.yml
+SHA1 ddeba40ccd75f3a5fcc42b613688fd2801e5c914 META.yml
 SHA1 32b33a1c160e1efbf82b1bf8765cde8455a32550 Makefile.PL
 SHA1 e9de29b6e5e9a5e446231b5b12b644f6ed2caafc README
 SHA1 acf3dd42f0d8a87dd02ef9f5f74b894423ffd4d8 TODO
 SHA1 fd48d0d8750eb949e485d8136b5b424fe73e9775 build/README
 SHA1 7bcc4113830721ad6e37a1ea79df94a6987c836d build/leak.pl
 SHA1 ac25bda8a6eb9058a9e42a8943c3e11b9fed88dc build/leaktest
-SHA1 ea7b43ec65524e6f4f3e7b8df0a8c82ed45df3f3 inc/Devel/CheckLib.pm
-SHA1 462eedc2f4055834c3a4a3fbed125dfcaa011ff1 lib/Math/BigInt/GMP.pm
+SHA1 f1e5cb2590288936ff4a330903fb3f7de0b83d9b inc/Devel/CheckLib.pm
+SHA1 771e0777f103a393382d9c0426a54e8fc83664d8 lib/Math/BigInt/GMP.pm
 SHA1 b389295c7eb542fb89f55d37390a35ac582b5e6c t/bigfltpm.inc
 SHA1 a6659404498c1d7b74e055769710e00bf425e355 t/bigfltpm.t
 SHA1 0f8838bf47e9c21a95bc15db11f435836440525c t/bigintg.t
@@ -45,7 +45,7 @@ SHA1 d6074079ab439bd3485ed2a5d784996fcd9e717d typemap
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.10 (GNU/Linux)
 
-iEYEARECAAYFAkyUA0YACgkQdC8qQo5jWl49NACeJZHcNiqlvUmp4ByclT5lgiaM
-F5oAn3uSoQwWBpUdQwbyixx+FkU0Visv
-=IR6U
+iEYEARECAAYFAkyVV5AACgkQdC8qQo5jWl73VgCfesRLc1xEvUmgvme4+/wFr+SN
+eUMAniqugOHwPPQwEFkmla1YnwHSSsxH
+=U7O4
 -----END PGP SIGNATURE-----
