@@ -1,3 +1,9 @@
+2010-09-19 v1.29 rafl 5558 tests  DEVELOPMENT RELEASE
+  * Attempt to fix a bug in the bundled version Devel::CheckLib.
+    It used to ignore @Config{qw(ccflags ldflags)} and only tried to look for
+    headers and libraries with the compiler's default include- and lib-paths as
+    well as those explicitly asked for by the user.
+
 2010-09-17 v1.28 rafl 5558 tests
   * Re-upload 1.27 without further changes as a stable release.
 
